new sample skins backend, bug fixed, merch, changelog page, etc.

--- a/index.html
+++ b/index.html
@@ -9,43 +9,33 @@
 <a href="quickplay.html"><img src="static/img/thumbnails/thumb6.png" class="homethumb"></a>
 <a href="more.html"><img src="static/img/thumbnails/thumb3.png" class="homethumb"></a>
 
-<br/><br/><a style="color:#7289DA" href="https://discord.gg/RadQ7xx" target="_blank">Join our Discord server!</a><br/><br/><hr/><br/>
-<span class="parthead">Welcome to Bonk Leagues!</span><br/><br/>
-<b>Bonk Leauges is a useful website for the popular game <a href="http://bonk.io" target="_blank">bonk.io</a> where you can:</b><br/><br/>
-- Create and edit skins with revolutionary drag-and-drop controls with out <a href="editor.html">Skin Editor</a>,<br/>
+<br/><br/><hr/><br/>
+
+<span class="parthead">Limited-time Merch!</span><br/><br/>
+
+<div style="margin:0 auto;max-width:750px;text-align:center;">
+    <a href="https://shop.spreadshirt.co.uk/BonkLeagues/" target="_blank">
+        <img src="static/img/merch_banner.png" style="max-width:100%;height:auto;" class="shadowimg">
+    </a>
+</div>
+<p>To celebrate 1,000 members in our <a href="https://discord.gg/RadQ7xx" id="discordlink" target="_blank">Discord server</a>, we have some limited-time merch for sale!<br/>(also we're doing a giveaway in our server, make sure to check that out).</p>
+BUY IT NOW! <a href="https://shop.spreadshirt.co.uk/BonkLeagues/" target="_blank">https://shop.spreadshirt.co.uk/BonkLeagues/</a>
+
+<br/><br/><hr/><br/><span class="parthead">Welcome to Bonk Leagues!</span><br/><br/>
+
+<b>Bonk Leagues is a useful website for the popular game <a href="http://bonk.io" target="_blank">bonk.io</a> where you can:</b><br/><br/>
+- Create and edit skins with revolutionary drag-and-drop controls with our <a href="editor.html">Skin Editor</a>,<br/>
 - Manage, save and share unlimited skins with ease with our <a href="skins.html">Skin Manager</a>,<br/>
 - Easily see a player's XP with our <a href="xpchecker.html">XP Checker</a>,<br/>
 <i>- And use many more tools for your bonk.io needs... (see the menu above)</i>
-<br/><br/><hr/><br/><span class="parthead">Why use Bonk Leagues?</span><br/><br/>
-Bonk Leagues is your go-to website for everything bonk.io, full of useful gaming tools.<br/><b>Just listen to these testimonials:</b><br/><br/>
-<div class="testimonial">
-    <i>"I think that Bonk Leagues is pretty useful for any bonk.io player"</i><br/><br/>
-    - <b>Rethlit</b>
-    <br/>-<br/>&#9733;&#9733;&#9733;&#9733;&#9733; 4.5/5
-</div>
-<div class="testimonial">
-    <i>It isn't FULL of features yet, but with a long period of no updates from Chaz it keeps Bonk.io fresh &amp; innovated.</i><br/>
-    - <b>ilikestalker</b>
-    <br/>-<br/>&#9733;&#9733;&#9733;&#9733;&#9734; 4/5
-</div>
-<br/>
-<div class="testimonial">
-    <i>"The staff are friendly peeps and the features are on point 👌"</i><br/>
-    - <b>The Blue Blur</b>
-    <br/>-<br/>&#9733;&#9733;&#9733;&#9733;&#9733; 4.9/5
-</div>
-<div class="testimonial">
-    <i>"Mac n Cheese is my choice of beverages"</i><br/><br/>
-    - <b>Gayfish</b>
-    <br/>-<br/>?&iquest;?&iquest;? 2113/5
-</div>
 
-<br/><br/><br/><span class="parthead">Our Team</span><br/><br/>
+<br/><br/><hr/><br/><span class="parthead">Our Team</span><br/><br/>
+
 Here are the people behind making Bonk Leagues and related content:<br/><br/>
 <div class="sampleskin">
     <img class="sknframe" src="static/img/avatars/finbae.png">
     <div>
-        <b>Finbae</b><span style="font-size:12px;color:#666;">#1155</span><br/><i>Frontend &amp; Web Dev</i>
+        <b>Finbae</b><span style="font-size:12px;color:#666;">#1110</span><br/><i>Frontend &amp; Web Dev</i>
     </div>
 </div>
 <div class="sampleskin">
@@ -54,9 +44,4 @@ Here are the people behind making Bonk Leagues and related content:<br/><br/>
         <b>PitsPower</b><span style="font-size:12px;color:#666;">#9562</span><br/><i>Backend &amp; Bot Dev</i>
     </div>
 </div>
-<div class="sampleskin">
-    <img class="sknframe" src="static/img/avatars/dionysus.gif">
-    <div>
-        <b>Dionysus</b><span style="font-size:12px;color:#666;">#0001</span><br/><i>Bad Dev lol</i>
-    </div>
-</div>
+<br/><br/>
