--- a/skins.html
+++ b/skins.html
@@ -110,7 +110,7 @@ styleToUse: 'skinstyle'
     <span class="parthead">Editing skin</span><br/><br/>
     <img class="sknframe sknframebig" id="sknframe3" type="image/svg+xml">
     <img class="sknframe" id="sknframe" type="image/svg+xml"><br/><br/>
-    <a id="openblse" class="button" style="font-size:24px;padding:5px 10px;margin-left:-10px;animation:none;">Open in Skin Editor (new)</a><br/><br/><br/>
+    <a id="openblse" class="button" style="font-size:24px;padding:5px 10px;margin-left:-10px;animation:none;">Open in Skin Editor</a><br/><br/><br/>
     Skin name: <input type="text" id="skne" maxlength="30" size="30"><br/>
     Skin slot colour: <input type="text" maxlength="7" size="7" id="sslotcol" class="jscolor {value:'fb016e', width:200, height:150, padding:0, borderWidth:0, backgroundColor:'transparent', hash:true}">
     <a style="font-style:italic;cursor:pointer;text-decoration:underline;font-size:18px;margin-left:10px;" id="resetcol">reset</a><br/>
@@ -168,7 +168,7 @@ styleToUse: 'skinstyle'
     <p style="font-weight:bold;">Welcome to the Bonk Leagues Skin Manager! To start, log in above.</p>
     <p>Here you can save, load, manage and share unlimited amounts of skins for bonk.io.</p>
     <p>You can also store multiple skins and transfer them across accounts!</p><br/>
-    <iframe style="max-width:560px;height:315px;width:100%;" src="https://www.youtube.com/embed/eOEIlxEa8h0?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe style="max-width:560px;height:315px;width:100%;" src="https://www.youtube.com/embed/xsHMOzYOAEA?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     <br/>
     <br/><br/>
     <span class="parthead">Feedback</span><br/>
