Added watermark to prevgen.php

--- a/changelog.html
+++ b/changelog.html
@@ -23,7 +23,12 @@ sel: ''
         content:"-";
     }
 </style>
-
+<!--
+<span class="parthead">- June 2018</span><br/>
+<ul>
+    <li>Added watermark to backend skin share images.</li>
+</ul>
+<br/><br/>-->
 <span class="parthead">2 June 2018</span><br/>
 <ul>
     <li>Created snazzy new changelog page</li>
