--- a/editor-beta.html
+++ b/editor-beta.html
@@ -2,7 +2,7 @@
 title: 'Bonk Leagues Skin Editor Beta'
 shorttitle: 'Skin Editor Beta'
 desc: 'The beta release of Bonk Leagues Skin Editor with all the upcoming features!'
-canonical: 'https://bonkleagues.github.io/editorbeta.html'
+canonical: 'https://bonkleagues.github.io/editor-beta.html'
 sel: 'editorbeta'
 scriptToUse: 'editorbetapagescript'
 ---
