More Discord plugging & some snazzy SEO

--- a/index.html
+++ b/index.html
@@ -11,23 +11,18 @@
 
 <br/><br/><hr/><br/>
 
-<span class="parthead">Limited-time Merch!</span><br/><br/>
-
-<div style="margin:0 auto;max-width:750px;text-align:center;">
-    <a href="https://shop.spreadshirt.co.uk/BonkLeagues/" target="_blank">
-        <img src="static/img/merch_banner.png" style="max-width:100%;height:auto;" class="shadowimg">
-    </a>
-</div>
-<p>To celebrate 1,000 members in our <a href="https://discord.gg/RadQ7xx" id="discordlink" target="_blank">Discord server</a>, we have some limited-time merch for sale!<br/>(also we're doing a giveaway in our server, make sure to check that out).</p>
-BUY IT NOW! <a href="https://shop.spreadshirt.co.uk/BonkLeagues/" target="_blank">https://shop.spreadshirt.co.uk/BonkLeagues/</a>
-
-<br/><br/><hr/><br/><span class="parthead">Welcome to Bonk Leagues!</span><br/><br/>
+<span class="parthead">Welcome to Bonk Leagues!</span><br/><br/>
 
 <b>Bonk Leagues is a useful website for the popular game <a href="http://bonk.io" target="_blank">bonk.io</a> where you can:</b><br/><br/>
 - Create and edit skins with revolutionary drag-and-drop controls with our <a href="editor.html">Skin Editor</a>,<br/>
 - Manage, save and share unlimited skins with ease with our <a href="skins.html">Skin Manager</a>,<br/>
 - Easily see a player's XP with our <a href="xpchecker.html">XP Checker</a>,<br/>
 <i>- And use many more tools for your bonk.io needs... (see the menu above)</i>
+
+
+<br/><br/><hr/><br/>
+
+<a href="bonk_discord.html"><span class="parthead" style="background:#7289da;font-size:30px;">Join the Discord Server!</span></a>
 
 <br/><br/><hr/><br/><span class="parthead">Our Team</span><br/><br/>
 
