Added skin editor stuff to the changelog

--- a/changelog.html
+++ b/changelog.html
@@ -29,6 +29,19 @@ sel: ''
     <li>Added watermark to backend skin share images.</li>
 </ul>
 <br/><br/>-->
+<span class="parthead">29 July 2018</span><br/>
+<ul>
+    <li>Adding zooming/panning to Skin Editor</li>
+    <li>Added local saving to Skin Editor</li>
+    <li>Exporting from the Skin Editor uses your actual username (if you have "remember me" enabled)</li>
+    <li>Added a delete button to start a new skin in the Skin Editor</li>
+    <li>Added arrow key navigation in Skin Editor</li>
+    <li>Pressing escape in the Skin Editor deselects everything</li>
+    <li>Current colour is now highlighted in the Skin Editor colour picker</li>
+    <li>Skin Editor selection and dragging is now less buggy</li>
+    <li>Minor Skin Editor bug fixes</li>
+</ul>
+<br/><br/>
 <span class="parthead">2 June 2018</span><br/>
 <ul>
     <li>Created snazzy new changelog page</li>
