oops, fixed the ™ being &trademark;

--- a/comingsoon.html
+++ b/comingsoon.html
@@ -3,5 +3,5 @@ permalink: /404.html
 sel: ''
 ---
 <span class="parthead">Coming Soon</span><br/>
-<div id="e404">SOON&trademark;</div><br/>
-bonkleagues.io will become active soon&trademark;. Stay tuned!<br/>
+<div id="e404">SOON™</div><br/>
+bonkleagues.io will become active soon™.<br/><br/>Stay tuned!<br/>
