Improved skin share links, generating codes is gone, showing number of clicks is now a thing

--- a/skins.html
+++ b/skins.html
@@ -28,8 +28,8 @@ styleToUse: 'skinstyle'
     <div class="choice skinchoice" data-choice="4">
         <img src="static/img/icons/icon4.png" width="64">
         <div>
-            <b>Use the Bonk Leagues Skin Editor <span style="color:#fb016e">NEW!</span></b><br/>
-            Create a skin with our new drag-and-drop editor
+            <b>Use the Bonk Leagues Skin Editor</b><br/>
+            Create a skin with our drag-and-drop editor
         </div>
     </div>
     <div class="choice skinchoice" data-choice="1">
@@ -50,7 +50,7 @@ styleToUse: 'skinstyle'
         <img src="static/img/icons/icon1.png" width="64">
         <div>
             <b>Enter skin code</b><br/>
-            Adds a skin from its unique skin code
+            <span style="font-size:12px">Note: Skin codes will be completely removed soon! Please change your left-over skin codes into links ASAP!</span>
         </div>
     </div>
     <br/>
@@ -124,12 +124,14 @@ styleToUse: 'skinstyle'
 
 <div id="shareskin">
     <span class="parthead">Share your skin</span><br/><br/>
-    <i style="font-size:13px;">Info: The following codes are for <b style="text-decoration:underline">sharing</b> meaning whoever you give these codes to will be able to <b style="text-decoration:underline">use your skin</b>.</i>
+    <i style="font-size:13px;">Info: By sending a Skin Sharing link, you are <b style="text-decoration:underline">sharing</b> meaning whoever you give these codes to will be able to <b style="text-decoration:underline">use your skin</b>.</i>
     <br/><br/>
-    <a id="sknshrlink" class="button" style="font-size:24px;padding:5px 10px;animation:none;margin-bottom:15px;">Get Skin Sharing link (recommended)</a><br/>
-    <b>or</b><br/>
-    <a id="skncode" class="button" style="font-size:24px;padding:5px 10px;animation:none;margin-top:15px;">Get Skin Code</a>
-    <br/><br/><hr/><br/>
+    <span id="genlink" style="font-size:24px">loading...</span>
+    <br/><br/>
+    <p id="genstats" style="font-size:16px">Your skin share link has been clicked <span id="genstatscount" style="color:#fb016e;font-weight:bold">x</span> time(s)!</p>
+    <!--<b>or</b><br/>
+    <a id="skncode" class="button" style="font-size:24px;padding:5px 10px;animation:none;margin-top:15px;">Get Skin Code</a>-->
+    <br/><hr/><br/>
     <span class="parthead">Show your skin</span><br/><br/>
     <b>Generated Skin Image:</b><br/>
     <i style="font-size:13px;">Info: If sharing to Discord or other social media, <b style="text-decoration:underline">use 'Copy image' instead of 'Copy image address'.</b></i>
