--- a/editor.html
+++ b/editor.html
@@ -11,11 +11,41 @@ scriptToUse: 'editorpagescript'
         padding:0;
         padding-top:1px;
     }
-    iframe{
+    #mainCont{
         width:100%;
         height:850px;
+        text-align:left;
+    }
+    #framebox{
+        display:inline-block;
+        width:calc(100% - 162px);
+        height:100%;
+        vertical-align:top;
+    }
+    #rightBan{
+        width:160px;
+        height:600px;
+        display:inline-block;
+        vertical-align:top;
+        margin-left:2px;
+    }
+    iframe{
+        width:100%;
+        height:100%;
         border:0;
+    }
+    @media screen and (max-width: 1250px) {
+        #rightBan{
+            display:none;
+        }
+        #framebox{
+            width:100%;
+        }
     }
 </style>
 
-<div id="framebox"><br/><br/>Loading...</div>
+
+
+<div id="mainCont">
+    <div id="framebox"></div><div id="rightBan"><!-- Bonk Leagues right banner --><ins class="adsbygoogle" style="display:inline-block;width:160px;height:600px" data-ad-client="ca-pub-8362785424135480" data-ad-slot="5451740996"></ins><script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
+</div>
