--- a/skins.html
+++ b/skins.html
@@ -6,6 +6,7 @@ canonical: 'https://bonkleagues.github.io/skins.html'
 sel: 'skins'
 scriptToUse: 'skinscript'
 styleToUse: 'skinstyle'
+specialAds: 'on'
 ---
 <div id="leftBan">
     <!-- Bonk Leagues left banner -->
