--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@ Here are the people behind making Bonk Leagues and related content:<br/><br/>
 <div class="sampleskin">
     <img class="sknframe" src="static/img/avatars/finbae.png">
     <div>
-        <b>Finbae</b><span style="font-size:12px;color:#666;">#1111</span><br/><i>Frontend &amp; Web Dev</i>
+        <b>Finbae</b><span style="font-size:12px;color:#7289da;">#4423</span><br/><i>Frontend &amp; Web Dev</i>
     </div>
 </div>
 <div class="sampleskin">
     <img class="sknframe" src="static/img/avatars/its_magic.png">
     <div>
-        <b>PitsPower</b><span style="font-size:12px;color:#666;">#9562</span><br/><i>Backend &amp; Bot Dev</i>
+        <b>PitsPower</b><span style="font-size:12px;color:#7289da;">#9562</span><br/><i>Backend &amp; Bot Dev</i>
     </div>
 </div>
 <br/><br/>
