Add contact email address

--- a/index.html
+++ b/index.html
@@ -40,3 +40,5 @@ Here are the people behind making Bonk Leagues and related content:<br/><br/>
     </div>
 </div>
 <br/><br/>
+Contact us: <b><a href="mailto:hi@bonkleagues.io" target="_blank">hi@bonkleagues.io</a></b>
+<br/><br/>
