Testing affiliate program temporarily, added banners.

--- a/serverstatus.html
+++ b/serverstatus.html
@@ -83,11 +83,14 @@ specialAds: 'on'
     <b>Website - </b><span id="statusBN-web">...</span><br/>
     <b>Database - </b><span id="statusBN-db">...</span>
 
-    <br/>
+    <br/><br/><br/>
+
+    <a href="https://gizmogain.com/?utm_source=bl" target="_blank"><img style="margin-bottom:20px" src="static/img/affiliate-gizmogain-banner.png"></a>
+
 
     <!--<i id="downholder" style="display:none;"><br/>Bonk.io has been down for <span id="downtime" style="font-weight:bold">...</span>.</i>-->
 
-    <br/><br/><hr/><br/><br/>
+    <br/><hr/><br/><br/>
 
     <span class="parthead">Bonk Leagues Server Status</span><br/><br/>
 
