--- a/xpchecker.html
+++ b/xpchecker.html
@@ -61,3 +61,4 @@ specialAds: 'on'
         <button id="check" class="button" style="font-size:24px;padding:5px 10px;animation:none;margin-left:0;">Check XP</button>
         <p id="errtxt" style="font-style:italic;font-size:12px"></p>
     </div>
+    <a href="https://gizmogain.com/?utm_source=bl" target="_blank"><img style="margin-bottom:20px;margin-top:40px" src="static/img/affiliate-gizmogain-banner.png"></a>
