--- a/skins.html
+++ b/skins.html
@@ -26,15 +26,14 @@ specialAds: 'on'
         <div id="tagUi"><span class="parthead tabBtn tabSel" id="tabAll">ALL SKINS</span><span id="tabCont"></span></div><br/><br/>
         <p id="txt-skin1" style="display:none">You have no saved skins yet. You can use the plus button to add one!<br/><br/>We recommend adding your current skin first.<br/><br/></p>
         <div class="skincont"></div><br/><div class="skinslot" data-skin="addskin" style="margin-right:0px;"><span style="margin-left:20px;">+</span></div>
-        <br/><br/><br/>
+        <!--<br/><br/><br/>
         <p style="font-size:12px;" class="txt-skin2">
             Info: Skins will apply to your currently active skin slot on Bonk.io.<br/><br/>-<br/>
             Important: Bonk Leagues Skin Manager uses localstorage to save skins, <br/>
             meaning skins are saved only in this browser, NOT YOUR BONK ACCOUNT!<br/><br/>
             <span style="font-weight:bold;font-style:italic">Make sure to backup your skins if you are switching computers<br/>or clearing your browser history!</span><br/><br/><br/>
             <a class="button" style="font-size:24px;padding:5px 10px;animation:none;" id="backupall">Backup skins</a>
-        </p>
-        <br/>
+        </p>-->
     </div>
 
     <div id="addskin">
@@ -179,6 +178,9 @@ specialAds: 'on'
     </div>
     <a id="button" class="button" data-next="loggedin">Login with Bonk.io</a>
     <br/><br/><br/><hr/><br/>
+
+    <a href="https://gizmogain.com/?utm_source=bl" target="_blank"><img style="margin-bottom:20px" src="static/img/affiliate-gizmogain-banner.png"></a>
+
     <div id="info">
         <span class="parthead">Info</span><br/>
         <p style="font-weight:bold;">Welcome to the Bonk Leagues Skin Manager! To start, log in above.</p>
