Update Adsense code

--- a/skins.html
+++ b/skins.html
@@ -10,13 +10,13 @@ specialAds: 'on'
 ---
 <div id="leftBan">
     <!-- Bonk Leagues left banner -->
-    <ins class="adsbygoogle" style="display:inline-block;width:160px;height:600px" data-ad-client="ca-pub-8362785424135480" data-ad-slot="2620374158"></ins>
-    <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8362785424135480" data-ad-slot="2620374158" data-ad-format="auto" data-full-width-responsive="true"></ins>
+	<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 </div>
 
 <div id="rightBan">
     <!-- Bonk Leagues right banner -->
-    <ins class="adsbygoogle" style="display:inline-block;width:160px;height:600px" data-ad-client="ca-pub-8362785424135480" data-ad-slot="5451740996"></ins>
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8362785424135480" data-ad-slot="5451740996" data-ad-format="auto" data-full-width-responsive="true"></ins>
     <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
 </div>
 
