Update Adsense code

--- a/skins.html
+++ b/skins.html
@@ -11,13 +11,21 @@ specialAds: 'on'
 <div id="leftBan">
     <!-- Bonk Leagues left banner -->
     <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8362785424135480" data-ad-slot="2620374158" data-ad-format="auto" data-full-width-responsive="true"></ins>
-	<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+	<script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
+	
+	<!-- BL Leftban Skins 2 -->
+	<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8362785424135480" data-ad-slot="5093794174" data-ad-format="auto" data-full-width-responsive="true"></ins>
+	<script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
 </div>
 
 <div id="rightBan">
     <!-- Bonk Leagues right banner -->
     <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8362785424135480" data-ad-slot="5451740996" data-ad-format="auto" data-full-width-responsive="true"></ins>
     <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
+	
+	<!-- BL Rightban Skins 2 -->
+	<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8362785424135480" data-ad-slot="7192154536" data-ad-format="auto" data-full-width-responsive="true"></ins>
+	<script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
 </div>
 
 <div id="pageCont">
