--- a/skins.html
+++ b/skins.html
@@ -9,23 +9,48 @@ styleToUse: 'skinstyle'
 specialAds: 'on'
 ---
 <div id="leftBan">
-    <!-- Bonk Leagues left banner -->
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8362785424135480" data-ad-slot="2620374158" data-ad-format="auto" data-full-width-responsive="true"></ins>
-	<script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
-	
-	<!-- BL Leftban Skins 2 -->
-	<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8362785424135480" data-ad-slot="5093794174" data-ad-format="auto" data-full-width-responsive="true"></ins>
-	<script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
+    <script async src="https://ssl.cdne.cpmstar.com/cached/js/lib.js"></script>
+    <script>
+        (function(w,pid){
+        var r=function(c,m){c=c.split('').reduce(function(a,b){return(a<<5)-a+b.charCodeAt(0)>>>m},0);return(10+((c*7)%26)).toString(36)+c.toString(36);},y=r(w.location.href.split('#')[0],1),c=r(w.location.href.split('#')[0]+pid,0);
+        w.document.write('<div style="width:160px;height:600px" class="'+c+'"></div>');
+        w[y]=w[y]||{};(w[y].libcmd=w[y].libcmd||[]).push({kind:'asynctagfetch',pid:pid,pindex:w.document.getElementsByClassName(c).length-1});
+        })(window,82865);
+    </script>
+    <script>
+        (function(w,pid){
+        var r=function(c,m){c=c.split('').reduce(function(a,b){return(a<<5)-a+b.charCodeAt(0)>>>m},0);return(10+((c*7)%26)).toString(36)+c.toString(36);},y=r(w.location.href.split('#')[0],1),c=r(w.location.href.split('#')[0]+pid,0);
+        w.document.write('<div style="width:160px;height:600px" class="'+c+'"></div>');
+        w[y]=w[y]||{};(w[y].libcmd=w[y].libcmd||[]).push({kind:'asynctagfetch',pid:pid,pindex:w.document.getElementsByClassName(c).length-1});
+        })(window,82865);
+    </script>
 </div>
 
 <div id="rightBan">
-    <!-- Bonk Leagues right banner -->
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8362785424135480" data-ad-slot="5451740996" data-ad-format="auto" data-full-width-responsive="true"></ins>
-    <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
-	
-	<!-- BL Rightban Skins 2 -->
-	<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8362785424135480" data-ad-slot="7192154536" data-ad-format="auto" data-full-width-responsive="true"></ins>
-	<script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
+    <script>
+        (function(w,pid){
+        var r=function(c,m){c=c.split('').reduce(function(a,b){return(a<<5)-a+b.charCodeAt(0)>>>m},0);return(10+((c*7)%26)).toString(36)+c.toString(36);},y=r(w.location.href.split('#')[0],1),c=r(w.location.href.split('#')[0]+pid,0);
+        w.document.write('<div style="width:160px;height:600px" class="'+c+'"></div>');
+        w[y]=w[y]||{};(w[y].libcmd=w[y].libcmd||[]).push({kind:'asynctagfetch',pid:pid,pindex:w.document.getElementsByClassName(c).length-1});
+        })(window,82865);
+    </script>
+    <script>
+        (function(w,pid){
+        var r=function(c,m){c=c.split('').reduce(function(a,b){return(a<<5)-a+b.charCodeAt(0)>>>m},0);return(10+((c*7)%26)).toString(36)+c.toString(36);},y=r(w.location.href.split('#')[0],1),c=r(w.location.href.split('#')[0]+pid,0);
+        w.document.write('<div style="width:160px;height:600px" class="'+c+'"></div>');
+        w[y]=w[y]||{};(w[y].libcmd=w[y].libcmd||[]).push({kind:'asynctagfetch',pid:pid,pindex:w.document.getElementsByClassName(c).length-1});
+        })(window,82865);
+    </script>
+</div>
+
+<div style="margin:0 auto;width:468px;height:60px;margin-bottom:52px">
+    <script>
+        (function(w,pid){
+        var r=function(c,m){c=c.split('').reduce(function(a,b){return(a<<5)-a+b.charCodeAt(0)>>>m},0);return(10+((c*7)%26)).toString(36)+c.toString(36);},y=r(w.location.href.split('#')[0],1),c=r(w.location.href.split('#')[0]+pid,0);
+        w.document.write('<div style="width:468px;height:60px" class="'+c+'"></div>');
+        w[y]=w[y]||{};(w[y].libcmd=w[y].libcmd||[]).push({kind:'asynctagfetch',pid:pid,pindex:w.document.getElementsByClassName(c).length-1});
+        })(window,82869);
+    </script>
 </div>
 
 <div id="pageCont">
