Revert "Roll out CPMStar ads, replacing Adsense"
This reverts commit 215ea8191b2d1522b4b575f0da463a5c35af38a9.

--- a/editor.html
+++ b/editor.html
@@ -23,11 +23,9 @@ scriptToUse: 'editorpagescript'
         vertical-align:top;
     }
     #rightBan{
-        position: absolute;
-        top: 35px;
-        right: 0px;
         width:160px;
         height:600px;
+        display:inline-block;
         vertical-align:top;
         margin-left:2px;
     }
@@ -49,21 +47,5 @@ scriptToUse: 'editorpagescript'
 
 
 <div id="mainCont">
-    <div id="framebox"></div><div id="rightBan">
-        <script async src="https://ssl.cdne.cpmstar.com/cached/js/lib.js"></script>
-        <script>
-            (function(w,pid){
-            var r=function(c,m){c=c.split('').reduce(function(a,b){return(a<<5)-a+b.charCodeAt(0)>>>m},0);return(10+((c*7)%26)).toString(36)+c.toString(36);},y=r(w.location.href.split('#')[0],1),c=r(w.location.href.split('#')[0]+pid,0);
-            w.document.write('<div style="width:160px;height:600px" class="'+c+'"></div>');
-            w[y]=w[y]||{};(w[y].libcmd=w[y].libcmd||[]).push({kind:'asynctagfetch',pid:pid,pindex:w.document.getElementsByClassName(c).length-1});
-            })(window,82865);
-        </script>
-        <script>
-            (function(w,pid){
-            var r=function(c,m){c=c.split('').reduce(function(a,b){return(a<<5)-a+b.charCodeAt(0)>>>m},0);return(10+((c*7)%26)).toString(36)+c.toString(36);},y=r(w.location.href.split('#')[0],1),c=r(w.location.href.split('#')[0]+pid,0);
-            w.document.write('<div style="width:160px;height:600px" class="'+c+'"></div>');
-            w[y]=w[y]||{};(w[y].libcmd=w[y].libcmd||[]).push({kind:'asynctagfetch',pid:pid,pindex:w.document.getElementsByClassName(c).length-1});
-            })(window,82865);
-        </script>
-    </div>
+    <div id="framebox"></div><div id="rightBan"><!-- Bonk Leagues right banner --><ins class="adsbygoogle" style="display:inline-block;width:160px;height:600px" data-ad-client="ca-pub-8362785424135480" data-ad-slot="5451740996"></ins><script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
 </div>
