--- a/serverstatus.html
+++ b/serverstatus.html
@@ -63,6 +63,18 @@ specialAds: 'on'
         }
     }
 </style>
+<div id="leftBan">
+    <!-- Bonk Leagues left banner -->
+    <ins class="adsbygoogle" style="display:inline-block;width:160px;height:600px" data-ad-client="ca-pub-8362785424135480" data-ad-slot="2620374158"></ins>
+    <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
+</div>
+
+<div id="rightBan">
+    <!-- Bonk Leagues right banner -->
+    <ins class="adsbygoogle" style="display:inline-block;width:160px;height:600px" data-ad-client="ca-pub-8362785424135480" data-ad-slot="5451740996"></ins>
+    <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
+</div>
+
 <div id="pageCont">
     <span class="parthead">Bonk.io Server Status</span><br/><br/>
 
