--- a/skins.html
+++ b/skins.html
@@ -200,3 +200,5 @@ specialAds: 'on'
 
     <div id="statusbar"></div>
     <div id="overlay"></div>
+
+    <script>cpmstarAPI({ kind:"game.createInterstitial" }); cpmstarAPI({kind: "go", module: "anchor"});</script>
