Testing out AdPlayer.pro adverts on BL

--- a/editor-beta.html
+++ b/editor-beta.html
@@ -18,4 +18,5 @@ scriptToUse: 'editorbetapagescript'
     }
 </style>
 
-<div id="framebox"><br/><br/>Loading...</div>
+<p>Please use the regular skin editor.</p>
+<!--<div id="framebox"><br/><br/>Loading...</div>-->
