--- a/editor.html
+++ b/editor.html
@@ -49,3 +49,5 @@ scriptToUse: 'editorpagescript'
 <div id="mainCont">
     <div id="framebox"></div><div id="rightBan"><!-- Bonk Leagues right banner --><ins class="adsbygoogle" style="display:inline-block;width:160px;height:600px" data-ad-client="ca-pub-8362785424135480" data-ad-slot="5451740996"></ins><script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
 </div>
+
+<script data-playerPro="current"></script>
