--- a/skins.html
+++ b/skins.html
@@ -200,3 +200,6 @@ specialAds: 'on'
 
     <div id="statusbar"></div>
     <div id="overlay"></div>
+
+    <script data-playerPro="current"></script>
+    <a id="skipButton" class="button" style="font-size:32px;padding:10px 20px;animation:none;margin-top:15px;position:fixed;top:10px;right:25px;display:none;z-index:9999">Skip Ad</a>
