Test out new AdPlayer.pro solution, may still need some tweaking

--- a/editor.html
+++ b/editor.html
@@ -51,3 +51,4 @@ scriptToUse: 'editorpagescript'
 </div>
 
 <script data-playerPro="current"></script>
+<script>cpmstarAPI({ kind:"game.createInterstitial" });</script>
